# gvr-unity-sdk

./: .gitignore  CHANGELOG  CHANGELOG.txt  CONTRIBUTING.md  CardboardDemoForUnity.unitypackage  CardboardSDKForUnity.unitypackage  LICENSE  README.md
.github/: ISSUE_TEMPLATE.md
Assets/GoogleVR/: LICENSE  README
Cardboard/: Package.md
Cardboard/DemoScene/: DemoScene.unity  FPS.cs  GazePointer.mat  GroundPlane.mat  Teleport.cs
Cardboard/Distortion/: CardboardDistortion.cginc
Cardboard/Editor/: CardboardAudioListenerEditor.cs  CardboardAudioRoomEditor.cs  CardboardAudioSourceEditor.cs  CardboardEditor.cs  CardboardGazeEditor.cs  CardboardSetup.cs  StereoControllerEditor.cs
Cardboard/Prefabs/: CardboardAdapter.prefab  CardboardAudioRoom.prefab  CardboardCamera.prefab  CardboardHead.prefab  CardboardMain.prefab  CardboardManager.prefab  Prefabs.md
Cardboard/Resources/: CardboardAudioMixer.mixer  RadialUndistortionEffect.shader  SolidColor.shader  UnlitTexture.shader
Cardboard/Scripts/: Cardboard.cs  CardboardEye.cs  (+10 more)
GoogleVR/: README
ProjectSettings/: AudioManager.asset  EditorBuildSettings.asset  Physics2DSettings.asset  ProjectSettings.asset  QualitySettings.asset
native_libs/: build.gradle  settings.gradle
native_libs/gvr-exoplayersupport/src/main/cpp/: CMakeLists.txt  frame_buffer.cc  frame_buffer.h  jni_helper.cc  jni_helper.h  video_player_holder.cc  video_player_holder.h  video_player_impl.cc  video_player_impl.h  video_quad_screen.cc  video_quad_screen.h  video_support_impl.cc
native_libs/gvr-exoplayersupport/src/main/cpp/ndk_helper/: vecmath.h
(+2739 files in other folders)
